crates/keron-lang/tests/corpus/errors/parse/val_named_in.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: `in` is a reserved keyword
  --> 1:5
  |
1 | val in: Int = 1
  |     ^
